# ChangeLog for dev-perl/Crypt-SSLeay
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Crypt-SSLeay/ChangeLog,v 1.62 2008/03/19 02:52:01 jer Exp $

  19 Mar 2008; Jeroen Roovers <jer@gentoo.org> Crypt-SSLeay-0.57.ebuild:
  Stable for HPPA too.

  05 Feb 2008; Markus Rothe <corsair@gentoo.org> Crypt-SSLeay-0.57.ebuild:
  Stable on ppc64

  13 Jan 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  Crypt-SSLeay-0.57.ebuild:
  ppc. stable

  17 Dec 2007; Samuli Suominen <drac@gentoo.org> Crypt-SSLeay-0.57.ebuild:
  amd64 stable

  06 Dec 2007; Raúl Porcel <armin76@gentoo.org> Crypt-SSLeay-0.57.ebuild:
  alpha/ia64/sparc/x86 stable

  10 Nov 2007; Samuli Suominen <drac@gentoo.org> Crypt-SSLeay-0.55.ebuild:
  amd64 stable

*Crypt-SSLeay-0.57 (26 Oct 2007)

  26 Oct 2007; Christian Hartmann <ian@gentoo.org>
  +Crypt-SSLeay-0.57.ebuild:
  Version bump

  09 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  Crypt-SSLeay-0.55.ebuild:
  Stable on ppc.

  01 Aug 2007; Joshua Kinard <kumba@gentoo.org> Crypt-SSLeay-0.55.ebuild:
  Stable on mips.

  22 Jul 2007; Tom Gall <tgall@gentoo.org> Crypt-SSLeay-0.55.ebuild:
  stable on ppc64

  09 Jul 2007; Raúl Porcel <armin76@gentoo.org> Crypt-SSLeay-0.55.ebuild:
  alpha/ia64/x86 stable

  09 Jul 2007; Michael Cummings <mcummings@gentoo.org>
  Crypt-SSLeay-0.55.ebuild:
  sparc stable

  06 Jul 2007; Tom Gall <tgall@gentoo.org> Crypt-SSLeay-0.54.ebuild:
  stable on ppc64

  05 Jul 2007; Raúl Porcel <armin76@gentoo.org> Crypt-SSLeay-0.54.ebuild:
  alpha/ia64/x86 stable

  30 Jun 2007; Joshua Kinard <kumba@gentoo.org> Crypt-SSLeay-0.54.ebuild:
  Stable on mips.

  21 Jun 2007; Michael Cummings <mcummings@gentoo.org>
  Crypt-SSLeay-0.54.ebuild:
  Marking sparc stable

*Crypt-SSLeay-0.55 (09 Jun 2007)

  09 Jun 2007; Michael Cummings <mcummings@gentoo.org>
  +Crypt-SSLeay-0.55.ebuild:
  Version bump; bug 181400 for keywording
