@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Crypt-SSLeay
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Crypt-SSLeay/ChangeLog,v 1.62 2008/03/19 02:52:01 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Crypt-SSLeay/ChangeLog,v 1.63 2008/06/07 12:03:12 aballier Exp $
+
+  07 Jun 2008; Alexis Ballier <aballier@gentoo.org>
+  Crypt-SSLeay-0.57.ebuild:
+  keyword ~sparc-fbsd
 
   19 Mar 2008; Jeroen Roovers <jer@gentoo.org> Crypt-SSLeay-0.57.ebuild:
   Stable for HPPA too.
